--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ Jinja2==3.1.6
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.9
+lightning==2.6.0
 lightning-utilities==0.15.2
 Mako==1.3.10
 Markdown==3.10
@@ -43,6 +44,7 @@ nest-asyncio==1.6.0
 networkx==3.5
 numpy==2.3.3
 optuna==4.6.0
+optuna-integration==4.6.0
 packaging==25.0
 pandas==2.3.3
 parso==0.8.5
